# poker-client

./: .gitmodules  CMakeLists.txt
designs/: card.blend  deck.blend  table.blend
models/: card.fbx  deck.fbx  model.fbx  model.mtl  table.fbx
shaders/: frag.glsl  gui_frag.glsl  gui_vert.glsl  model_frag.glsl  model_vert.glsl  vert.glsl
src/: CMakeLists.txt  camera.cpp  camera.h  cards.cpp  cards.h  indexBuffer.cpp  indexBuffer.h  main.cpp  main.h  mesh.cpp  mesh.h  model.cpp  model.h  network.cpp  network.h  scene.cpp  scene.h  shader.cpp  shader.h  vertexBuffer.cpp  vertexBuffer.h  windowManager.cpp
src/engine/: camera.h  gui.cpp  gui.h  indexBuffer.cpp  indexBuffer.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h  shader.cpp  vertexBuffer.cpp  vertexBuffer.h  windowManager.cpp  windowManager.h
textures/cards/: rename.py
